# nip41-hd-proto

./: Cargo.toml  README.md  run_sample.sh
src/: hd.rs  keys.rs  main.rs  nostr.rs
